# codebase-cartographer

./: .env  .env.example  .gitignore  FINAL_REPORT.md  INTERIM_REPORT.md  README.md  RECONNAISSANCE.md  fix_pagerank.py  pyproject.toml  test_llm.py  test_llm_google.py  test_parse.py  test_pr.py  test_scope.py
.cartography/: CODEBASE.md  cache.json  cartography_trace.jsonl  catalog.json  lineage_graph.json  module_graph.json  onboarding_brief.md
artifacts/: CODEBASE.md  module_graph_git_4ba5b3ba.json  module_graph_git_de811ade.json  onboarding_brief.md
mock_project/: dag.py  process_orders.py
mock_project/.cartography/: lineage.json  lineage_graph.json  module_graph.json
mock_project/models/: schema.yml  stg_orders.sql
semantic_index/: index.json
src/: cli.py  orchestrator.py  server.py
src/agents/: archivist.py  hydrologist.py  navigator.py  semanticist.py  surveyor.py
src/analyzers/: dag_config_parser.py  python_dataflow_analyzer.py  sql_lineage.py  tree_sitter_analyzer.py
src/analyzers/dag_parsers/: plugins.py
src/codebase_cartographer/: cli.py
src/graph/: graph_builder.py  knowledge_graph.py
src/models/: lineage.py  nodes.py
src/utils/: canonicalization_service.py  clustering.py  git_provider.py  git_utils.py  identity_resolver.py  llm_client.py  module_summary.py  semantic_index.py  similarity.py  trace_logger.py
tests/: test_archivist_excellence.py  test_lineage_graph.py  test_python_dataflow.py  test_semanticist.py  test_sql_lineage.py  test_surveyor.py  verify_recon.py
ui/: app.js  index.html  style.css
(+12 files in other folders)
